# darkwire

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: build-client-binaries.yml  deploy-relay.yml
crates/darkwire-client/: Cargo.toml
crates/darkwire-client/src/: bootstrap.rs  commands.rs  config.rs  e2e.rs  keys.rs  main.rs  runtime.rs  session_store.rs  trust.rs  ui.rs  wire.rs
crates/darkwire-client/src/keys/: handshake.rs  mod.rs
crates/darkwire-client/src/runtime/: outbox.rs  recovery.rs  session_flow.rs
crates/darkwire-client/src/ui/: clipboard.rs  line_parse.rs  mod.rs  render.rs  style.rs  text.rs
crates/darkwire-protocol/: Cargo.toml
crates/darkwire-protocol/src/: config.rs  events.rs  invite.rs  lib.rs  login.rs
crates/darkwire-relay/: Cargo.toml
crates/darkwire-relay/src/: app_state.rs  handshake_store.rs  invite_store.rs  logging.rs  login_store.rs  main.rs  prekey_store.rs  rate_limit.rs  session_store.rs  ws_handler.rs
crates/darkwire-relay/src/ws_handler/: e2e.rs  login.rs  mod.rs  outgoing.rs  parse.rs
deploy/caddy/: Caddyfile.example
docs/: phase2_protocol_v2_spec.md  phase2_security_spec_freeze.md
scripts/: install.sh  smoke-reliability.sh  smoke.sh  start-client.sh  start-relay.sh
