[workspace]
members = [
  "crates/darkwire-protocol",
  "crates/darkwire-client",
  "crates/darkwire-relay",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
rust-version = "1.76"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
uuid = { version = "1", features = ["serde", "v4"] }
