[package]
name = "darkwire-client"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "darkwire"
path = "src/main.rs"

[dependencies]
clap.workspace = true
darkwire-protocol = { path = "../darkwire-protocol" }
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
