[package]
name = "darkwire-client"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "darkwire"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
clap.workspace = true
crossterm.workspace = true
darkwire-protocol = { path = "../darkwire-protocol" }
dotenvy.workspace = true
futures-util.workspace = true
ring = "0.17"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
x25519-dalek = { version = "2", features = ["static_secrets"] }
uuid.workspace = true
