[package]
name = "darkwire-relay"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "darkwire-relay"
path = "src/main.rs"

[dependencies]
axum.workspace = true
clap.workspace = true
darkwire-protocol = { path = "../darkwire-protocol" }
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio-tungstenite.workspace = true
