[package]
name = "darkwire-relay"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "darkwire-relay"
path = "src/main.rs"

[dependencies]
axum.workspace = true
base64 = "0.22"
clap.workspace = true
darkwire-protocol = { path = "../darkwire-protocol" }
dotenvy.workspace = true
futures-util.workspace = true
ring = "0.17"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio-tungstenite.workspace = true
